--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <title>Budget Tracker</title>
   </head>
-  <body>
+  <body class="min-h-screen w-full bg-gray-400 text-slate-700 font-sans">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
