--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,24 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script type="text/javascript">
+      (function (l) {
+        if (l.search[1] === "/") {
+          const decoded = l.search
+            .slice(1)
+            .split("&")
+            .map(function (s) {
+              return s.replace(/~and~/g, "&");
+            })
+            .join("?");
+          window.history.replaceState(
+            null,
+            null,
+            l.pathname.slice(0, -1) + decoded + l.hash
+          );
+        }
+      })(window.location);
+    </script>
     <title>Budget Tracker</title>
   </head>
   <body class="min-h-screen w-full text-slate-700 font-sans box-border">
